--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Memory game</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="https://luiscastro193.github.io/favicon.svg" type="image/svg+xml">
 	<link rel="stylesheet" href="styles.css">
 	<script src="main.js" defer></script>
