--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="https://luiscastro193.github.io/favicon.svg" type="image/svg+xml">
 	<link rel="stylesheet" href="styles.css">
+	<link rel="preload" href="cards/back.svg" as="image">
 	<script src="main.js" defer></script>
 </head>
 <body>
