--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="styles.css">
 	<link rel="preload" href="cards/back.svg" as="image">
 	<script src="main.js" defer></script>
+	<script type="module" async src="https://luiscastro193.github.io/stats.js"></script>
 </head>
 <body>
 	<main class="full-size"><section class="deck"></section></main>
