--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="preload" href="cards/back.svg" as="image">
 	<script src="main.js" defer></script>
 	<script type="module" async src="https://luiscastro193.github.io/stats.js"></script>
+	<script type="module" async src="https://luiscastro193.github.io/cache.js"></script>
 </head>
 <body>
 	<main class="full-size"><section class="deck"></section></main>
