Extra safe loading

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<title>Memory game</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="https://luiscastro193.github.io/favicon.svg" type="image/svg+xml">
-	<link rel="stylesheet" href="styles.css">
+	<link id="styles" rel="stylesheet" href="styles.css">
 	<link rel="preload" href="cards/back.svg" as="image">
-	<script src="main.js" defer></script>
+	<script type="module" src="main.js"></script>
 	<script type="module" async src="https://luiscastro193.github.io/stats.js"></script>
 	<script type="module" async src="https://luiscastro193.github.io/cache.js"></script>
 </head>
